Take 743 to fix divider gap bug
Prayers https://github.com/maithemewp/mai-engine/issues/350

--- a/assets/scss/components/blocks/_divider.scss
+++ b/assets/scss/components/blocks/_divider.scss
@@ -4,9 +4,8 @@
 	display: block;
 	width: var(--divider-width, var(--alignfull-width, auto));
 	height: var(--divider-height);
-	margin-top: -1px;
-	margin-bottom: -1px;
 	background: var(--divider-background-color, transparent);
+	transform: scale(1.01);
 }
 
 .wp-block-cover,
